feat: add collectionTableActions.tsx component to allow deletion + edition of translations in the table

--- a/service/src/utils/i18n/dictionaries/de.json
+++ b/service/src/utils/i18n/dictionaries/de.json
@@ -82,6 +82,16 @@
 		"learning": {
 			"title": "Lernen"
 		},
+		"collection": {
+			"table": {
+				"actions": {
+					"dropdownTrigger": "Öffnen",
+					"dropdownEditButton": "Übersetzung anpassen",
+					"dropdownDeleteTranslationButton": "Übersetzung löschen",
+					"dropdownDeleteFromCollectionButton": "Übersetzung aus Sammlung löschen"
+				}
+			}
+		},
 		"account": {
 			"title": "Account",
 			"name": {
